/*
 * Copyright (c) 2021 University of Porto/Faculty of Sciences (UP/FCUP).
 *
 * Author: Joaquim Silva
 *
 * This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
 * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 * You should have received a copy of the GNU General Public License along with this program. If not, see <https://www.gnu.org/licenses/>.
 *
 */

syntax = "proto3";

option java_package = "pt.up.fc.dcc.hyrax.jay.proto";
option java_outer_classname = "JayProto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

enum StatusCode {
    Success = 0;
    Error = 1;
    Waiting = 2;
    Received = 3;
    Ready = 4;
    End = 5;
    TimedOut = 6;
}

enum PowerStatus {
    FULL = 0;
    AC_CHARGING = 1; // AC Charging
    USB_CHARGING = 2; // USB Charging
    QI_CHARGING = 3; // Wireless Charging
    CHARGING = 4; // Charging with unknown method
    DISCHARGING = 5; // Unplugged
    UNKNOWN = 6;
}

message Task {
    TaskInfo info = 1;

    bytes data = 2;
}

message TaskStream {
    Action status = 1;
    Task task = 2;
    bool localStream = 3;

    enum Action {
        BEGIN_TRANSFER = 0;
        TRANSFER = 1;
        END_TRANSFER = 2;
    }
}

message TaskInfo {
    string id = 1;
    int64 dataSize = 2;
    int64 deadline = 3;
    int64 creationTimeStamp = 5;
}

message Status {
    StatusCode code = 1;
}

message CurrentEstimations {
    float idle = 1;
    float compute = 2;
    float rx = 3;
    float tx = 4;
    int32 batteryLevel = 5;
    float batteryCapacity = 6;
    float batteryVoltage = 7;
}

message PowerEstimations {
    float idle = 1;
    float compute = 2;
    float rx = 3;
    float tx = 4;
    int32 batteryLevel = 5;
    float batteryCapacity = 6;
}

message WorkerInfo {

    string id = 1; // uuid

    StatusCode status = 2;

    int32 batteryLevel = 3;
    int32 batteryCapacity = 4;
    PowerStatus batteryStatus = 5;

    int32 cpuCores = 6;
    int32 queueSize = 7;
    int32 runningTasks = 8;
    int32 queuedTasks = 9;
    int32 waitingToReceiveTasks = 10;

    int64 avgTimePerTask = 11;

    enum Type {
        LOCAL = 0;
        REMOTE = 1;
        CLOUD = 2;
    }
    Type type = 12;

    float bandwidthEstimate = 13;
    int64 totalMemory = 14;
    int64 freeMemory = 15;
    int64 avgResultSize = 16;
    int32 brokerPort = 17;
    PowerEstimations powerEstimations = 18;
}

message WorkerComputeStatus {
    int32 queueSize = 1;
    int32 runningTasks = 2;
    int32 queuedTasks = 3;
    int32 waitingToReceiveTasks = 4;
    int64 avgTimePerTask = 5;
}

message Ping {
    bytes data = 1;
    bool reply = 2;
}

message ServiceStatus {
    enum Type {
        SCHEDULER = 0;
        WORKER = 1;
        PROFILER = 2;
    }
    Type type = 1;
    bool running = 2;
}

message Scheduler {
    string id = 1;
    string name = 2;
    string description = 3;
}

message Schedulers {
    repeated Scheduler scheduler = 1;
}

message WorkerTypes {
    repeated WorkerInfo.Type type = 1;
}

message BandwidthEstimate {
    enum Type {
        ACTIVE = 0;
        PASSIVE = 1;
        ALL = 2;
    }
    Type type = 1;
    repeated WorkerInfo.Type workerType = 2;
}

message String {
    string str = 1;
}

message Weights {
    float computeTime = 1;
    float queueSize = 2;
    float runningTasks = 3;
    float battery = 4;
    float bandwidth = 5;
}

message Settings {
    map<string, string> setting = 1;
}

message TaskExecutor {
    string id = 1;
    string name = 2;
    string description = 3;
}

message TaskExecutors {
    repeated TaskExecutor taskExecutors = 1;
}

message Request {
    string request = 1;
    repeated bytes args = 2;
}

message Response {
    Status status = 1;
    bytes bytes = 2;
    string id = 3;
}

message JayState {
    enum state {
        IDLE = 0;
        DATA_SND = 1;
        DATA_RCV = 2;
        COMPUTE = 3;
        MULTICAST_ADVERTISE = 4;
        MULTICAST_LISTEN = 5;
    }
    state jayState = 1;
}

message Time {
    int64 value = 1;
}

message Power {
    int32 level = 1;
    float current = 2;
    float power = 3;
    float voltage = 4;
    float temperature = 5;
    int64 energy = 6;
    float charge = 7;
    float capacity = 8;
    PowerStatus status = 9;
}

message Transport {
    enum Medium {
        WIFI = 0;
        CELLULAR = 1;
        BLUETOOTH = 2;
        ETHERNET = 3;
        VPN = 4;
        WIFI_AWARE = 5;
        LOWPAN = 6;
        UNKNOWN = 7;
    }

    enum CellularTechnology {
        SECOND_GEN = 0;
        THIRD_GEN = 1;
        FOURTH_GEN = 2;
        FIFTH_GEN = 3;
        UNKNOWN_GEN = 4;
    }

    Medium medium = 1;
    CellularTechnology cellularTechnology = 2;
    int32 downstreamBandwidth = 3;
    int32 upstreamBandwidth = 4;
}

message TimeRange {
    int64 start = 1;
    int64 end = 2;
}

message ProfileRecording {
    TimeRange timeRange = 1;
    repeated JayState jayState = 2;
    Power power = 3;
    int32 cpuCount = 4;
    repeated int64 cpuFrequency = 5;
    Transport transport = 6;
    repeated string systemUsage = 7;
    int64 totalMemory = 8;
    int64 freeMemory = 9;
    repeated string sensors = 10;
}

message ProfileRecordings {
    repeated ProfileRecording profileRecording = 1;
}

message TaskAllocationNotification {
    string workerId = 1;
    string taskId = 2;
}

// Internal and External communication Broker
service BrokerService {
    rpc ping (Ping) returns (Ping) {
    }; // ExternalBroker > Broker

    rpc executeTask (stream TaskStream) returns (stream Response) {
    }; // ExternalBroker > Broker --> Calls WorkerService::execute
    rpc scheduleTask (Task) returns (Response) {
    }; // App > Broker --> Calls SchedulerService::schedule

    //       SchedulerService::notifyWorkerUpdate
    rpc requestWorkerStatus (google.protobuf.Empty) returns (WorkerInfo) {
    }; // ExternalBroker > Broker
    //      SchedulerService::notifyWorkerUpdate

    rpc notifySchedulerForAvailableWorkers (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }; // SchedulerService > Broker

    rpc getSchedulers (google.protobuf.Empty) returns (Schedulers) {
    }; // App > Broker --> Calls SchedulerService::listSchedulers
    rpc setScheduler (Scheduler) returns (Status) {
    }; // App > Broker --> Calls SchedulerService::setScheduler

    rpc setSchedulerSettings (Settings) returns (Status) {
    };

    rpc listenMulticast (google.protobuf.BoolValue) returns (Status) {
    }; // SchedulerService --> Broker (Starts MC listen)
    rpc announceMulticast (google.protobuf.Empty) returns (Status) {
    }; // SchedulerService --> Broker (Starts MCast advertise)

    rpc enableHearBeats (WorkerTypes) returns (Status) {
    }; // SchedulerService --> Broker (start HB)
    rpc enableBandwidthEstimates (BandwidthEstimate) returns (Status) {
    }; // SchedulerService --> Broker (start RTT Estimate)
    rpc disableHearBeats (google.protobuf.Empty) returns (Status) {
    }; // SchedulerService --> Broker (start HB)
    rpc disableBandwidthEstimates (google.protobuf.Empty) returns (Status) {
    }; // SchedulerService --> Broker (start RTT Estimate)
    rpc enableWorkerStatusAdvertisement (google.protobuf.Empty) returns (Status) {
    }
    rpc disableWorkerStatusAdvertisement (google.protobuf.Empty) returns (Status) {
    }

    rpc announceServiceStatus (ServiceStatus) returns (Status) {
    };
    rpc stopService (google.protobuf.Empty) returns (Status) {
    };

    rpc calibrateWorker (Task) returns (google.protobuf.Empty) {
    };
    rpc setSettings (Settings) returns (Status) {
    };

    rpc listTaskExecutors (google.protobuf.Empty) returns (TaskExecutors) {
    };
    rpc selectTaskExecutor (TaskExecutor) returns (Status) {
    };
    rpc callExecutorAction (Request) returns (Response) {
    };
    rpc runExecutorAction (Request) returns (Status) {
    };
    rpc setExecutorSettings (Settings) returns (Status) {
    };

    rpc getExpectedCurrent (google.protobuf.Empty) returns (CurrentEstimations) {
    };

    rpc getExpectedPower (google.protobuf.Empty) returns (PowerEstimations) {
    };

    rpc getExpectedCurrentFromRemote (WorkerInfo) returns (CurrentEstimations) {
    };

    rpc getExpectedPowerFromRemote (WorkerInfo) returns (PowerEstimations) {
    };

    rpc networkBenchmark (Task) returns (google.protobuf.Empty) {
    };
    rpc informAllocatedTask (String) returns (Status) {
    };
    rpc notifyAllocatedTask (TaskAllocationNotification) returns (Status) {
    };
}

service ProfilerService {
    // setState(STATE)  stack states
    rpc setState (JayState) returns (Status) {
    };
    // unsetState(STATE) unstack states
    rpc unSetState (JayState) returns (Status) {
    };
    // startRecording()
    rpc startRecording (google.protobuf.Empty) returns (Status) {
    };
    // stopRecording()
    rpc stopRecording (google.protobuf.Empty) returns (ProfileRecordings) {
    };
    // getDeviceStatus()
    rpc getDeviceStatus (google.protobuf.Empty) returns (ProfileRecording) {
    };
    rpc getExpectedCurrent (google.protobuf.Empty) returns (CurrentEstimations) {
    };
    rpc getExpectedPower (google.protobuf.Empty) returns (PowerEstimations) {
    };
    rpc testService (google.protobuf.Empty) returns (ServiceStatus) {
    };
    rpc stopService (google.protobuf.Empty) returns (Status) {
    };
}

// Broker > SchedulerBase
service SchedulerService {
    rpc schedule (TaskInfo) returns (WorkerInfo) {
    }; // Schedule a Task
    rpc notifyTaskComplete (TaskInfo) returns (google.protobuf.Empty) {
    }; // Report Task completion to scheduler
    rpc notifyWorkerUpdate (WorkerInfo) returns (Status) {
    }; // Inform about Worker updates
    rpc notifyWorkerFailure (WorkerInfo) returns (Status) {
    }; // Inform about Worker connection failures
    rpc setScheduler (Scheduler) returns (Status) {
    }; // Select Scheduler to be used
    rpc listSchedulers (google.protobuf.Empty) returns (Schedulers) {
    }; // List available Schedulers
    rpc testService (google.protobuf.Empty) returns (ServiceStatus) {
    };
    rpc stopService (google.protobuf.Empty) returns (Status) {
    };
    rpc setSchedulerSettings (Settings) returns (Status) {
    };
}

// Broker > WorkerService
service WorkerService {
    rpc execute (TaskInfo) returns (Response) {
    }; // Queue a Task for execution
    rpc testService (google.protobuf.Empty) returns (ServiceStatus) {
    };
    rpc stopService (google.protobuf.Empty) returns (Status) {
    };
    rpc listTaskExecutors (google.protobuf.Empty) returns (TaskExecutors) {
    };
    rpc selectTaskExecutor (TaskExecutor) returns (Status) {
    };
    rpc callExecutorAction (Request) returns (Response) {
    };
    rpc runExecutorAction (Request) returns (Status) {
    };
    rpc setExecutorSettings (Settings) returns (Status) {
    };
    rpc getWorkerStatus (google.protobuf.Empty) returns (WorkerComputeStatus) {
    };
    rpc informAllocatedTask (String) returns (Status) {
    };
}